FIXE WEEK 8 DATA LINKS

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </section>
 
                 <section>
-                    <h3>Week 8: Hex bins, Heatmaps, Georeferencing &amp; Creating Data & Models</h3>
+                    <h3>Week 8: Hex bins, Heatmaps, Geocoding &amp; Creating Data & Models</h3>
                     <section class="slides">
                         <h4>
                             <a href="week8/index.html">slides</a>
