--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 </section>
 
                 <section>
-                    <h3>Week 12</h3>
+                    <h3>Week 12: Special Topics</h3>
                     <section class="slides">
                         <h4>
                             <a href="week12/index.html">slides</a>
@@ -363,7 +363,7 @@
                 </section>
 
                 <section>
-                    <h3>Week 13</h3>
+                    <h3>Week 13: Final Project Lab</h3>
                     <section class="slides">
                         <h4>
                             <a href="week13/index.html">slides</a>
@@ -372,7 +372,7 @@
                 </section>
 
                 <section>
-                    <h3>Week 14</h3>
+                    <h3>Week 14: Final Project Lab</h3>
                     <section class="slides">
                         <h4>
                             <a href="week14/index.html">slides</a>
