--- a/week1/index.html
+++ b/week1/index.html
@@ -55,7 +55,7 @@
 
         <div class="slide">
             <h2>Class homepage</h2>
-            <p><a target="_blank" href="https://due-parsons.github.io/methods3-materials-fall2020/">due-parsons.github.io/methods3-materials-fall2020</a></p>
+            <p><a target="_blank" href="https://due-parsons.github.io/methods3-materials-fall2021/">due-parsons.github.io/methods3-materials-fall2021</a></p>
         </div>
 
         <div class="slide">
@@ -75,13 +75,18 @@
 
         <div class="slide">
             <h2>Email</h2>
-            <p>Notifications from me will come through Canvas</p>
+            <p>We prefer Slack</p>
         </div>
 
         <div class="slide">
-            <h2>Emailing me</h2>
-            <p>Personal: email me directly</p>
-            <p>About an assignment: post a Canvas discussion question</p>
+            <h2>Announcements</h2>
+            <p>Will come through Slack, so please ensure you get email notifications through it</p>
+        </div>
+
+        <div class="slide">
+            <h2>Getting in touch with us</h2>
+            <p>Personal: message or email us directly</p>
+            <p>About an assignment: post a question in Slack</p>
         </div>
 
         <div class="slide">
@@ -164,6 +169,10 @@
 
         <div class="slide" style="background-image: url(img/methods3-fall2019.png);">
             <a class="source" href="http://due-parsons.github.io/methods3-fall2019/">source</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/methods3-fall2020.png);">
+            <a class="source" href="http://due-parsons.github.io/methods3-fall2020/">source</a>
         </div>
 
         <div class="slide intermission"></div>
