examples of Saras work- maybe too many slides

--- a/week1/index.html
+++ b/week1/index.html
@@ -198,6 +198,39 @@
                 Curb Your Litter
             </a>
         </div>
+        <div class="slide">
+            <h2>maps that Sara has made</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/sara_portfolio_cusp.png);">
+            <a class="source" href="http://cuspmap.org/NYC//">
+                CUSP Map, NYC & Pittsburgh
+            </a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/sara_portfolio_fault-lines_viz.png);">
+            <a class="source" href="https://edbuild.org/content/fault-lines">
+                Fault Lines: America's Most Segregating School District Borders
+            </a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/sara_portfolio_fractured.png);">
+            <a class="source" href="https://edbuild.org/content/fractured">
+                Fractured
+            </a>
+        </div>
+
+         <div class="slide" style="background-image: url(img/sara_portfolio_split_cities.png);">
+            <a class="source" href="https://www.fairdistrictsga.org/gerrymandering">
+                Fair Districts GA
+            </a>
+        </div>
+
+         <div class="slide" style="background-image: url(img/sara_portfolio_lawrenceville.png);">
+            <a class="source" href="https://www.fairdistrictsga.org/gerrymandering">
+                Fair Districts GA
+            </a>
+        </div>
 
         <div class="slide">
             <h2>today:</h2>
