--- a/week1/index.html
+++ b/week1/index.html
@@ -178,7 +178,7 @@
         <div class="slide intermission"></div>
 
         <div class="slide">
-            <h2>maps that I've made</h2>
+            <h2>maps that Eric's made</h2>
         </div>
 
         <div class="slide" style="background-image: url(img/garden_maps.png);">
