Add class objectives

--- a/week1/index.html
+++ b/week1/index.html
@@ -26,18 +26,118 @@
         </div>
 
         <div class="slide">
+            <h2>maps that Eric's made</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/garden_maps.png);">
+            <a class="source" href="http://gardenmaps.org/">
+                garden maps
+            </a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/llnyc.png);">
+            <a class="source" href="http://596acres.org/">
+                Living Lots NYC (596 Acres)
+            </a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/curb-your-litter.png);">
+            <a class="source">
+                Curb Your Litter
+            </a>
+        </div>
+        <div class="slide">
+            <h2>maps that Sara has made</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/sara_portfolio_cusp.png);">
+            <a class="source" href="http://cuspmap.org/NYC//">
+                CUSP Map, NYC & Pittsburgh
+            </a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/sara_portfolio_fractured.png);">
+            <a class="source" href="https://edbuild.org/content/fractured">
+                Fractured
+            </a>
+        </div>
+
+         <div class="slide" style="background-image: url(img/sara_portfolio_split_cities.png);">
+            <a class="source" href="https://www.fairdistrictsga.org/gerrymandering">
+                Fair Districts GA
+            </a>
+        </div>
+
+         <div class="slide" style="background-image: url(img/sara_portfolio_lawrenceville.png);">
+            <a class="source" href="https://www.fairdistrictsga.org/gerrymandering">
+                Fair Districts GA
+            </a>
+        </div>
+
+        <div class="slide intermission"></div>
+
+        <div class="slide">
             <h1>Syllabus</h1>
         </div>
 
         <div class="slide">
-            <h1>Syllabus</h1>
+            <h1>Objectives</h1>
+        </div>
+
+        <div class="slide">
+            <h1>Objectives</h1>
+            <ul style="list-style: disc;">
+                <li>improve spatial data literacy</li>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h1>Objectives</h1>
+            <ul style="list-style: disc;">
+                <li>improve spatial data literacy</li>
+                <li>introduce and apply cartographic concepts</li>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h1>Objectives</h1>
+            <ul style="list-style: disc;">
+                <li>improve spatial data literacy</li>
+                <li>introduce and apply cartographic concepts</li>
+                <li>introduce GIS concepts</li>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h1>Objectives</h1>
+            <ul style="list-style: disc;">
+                <li>improve spatial data literacy</li>
+                <li>introduce and apply cartographic concepts</li>
+                <li>introduce GIS concepts</li>
+                <li>apply GIS concepts offline and online</li>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h1>Objectives</h1>
+            <ul style="list-style: disc;">
+                <li>improve spatial data literacy</li>
+                <li>introduce and apply cartographic concepts</li>
+                <li>introduce GIS concepts</li>
+                <li>apply GIS concepts offline and online</li>
+                <li>introduce webmapping</li>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h1>Timeline</h1>
             <ul>
                 <li>6 weeks: GIS</li>
             </ul>
         </div>
 
         <div class="slide">
-            <h1>Syllabus</h1>
+            <h1>Timeline</h1>
             <ul>
                 <li>6 weeks: GIS</li>
                 <li>5 weeks: online maps</li>
@@ -45,7 +145,7 @@
         </div>
 
         <div class="slide">
-            <h1>Syllabus</h1>
+            <h1>Timeline</h1>
             <ul>
                 <li>6 weeks: GIS</li>
                 <li>5 weeks: online maps</li>
@@ -173,57 +273,6 @@
 
         <div class="slide" style="background-image: url(img/methods3-fall2020.png);">
             <a class="source" href="http://due-parsons.github.io/methods3-fall2020/">source</a>
-        </div>
-
-        <div class="slide intermission"></div>
-
-        <div class="slide">
-            <h2>maps that Eric's made</h2>
-        </div>
-
-        <div class="slide" style="background-image: url(img/garden_maps.png);">
-            <a class="source" href="http://gardenmaps.org/">
-                garden maps
-            </a>
-        </div>
-
-        <div class="slide" style="background-image: url(img/llnyc.png);">
-            <a class="source" href="http://596acres.org/">
-                Living Lots NYC (596 Acres)
-            </a>
-        </div>
-
-        <div class="slide" style="background-image: url(img/curb-your-litter.png);">
-            <a class="source">
-                Curb Your Litter
-            </a>
-        </div>
-        <div class="slide">
-            <h2>maps that Sara has made</h2>
-        </div>
-
-        <div class="slide" style="background-image: url(img/sara_portfolio_cusp.png);">
-            <a class="source" href="http://cuspmap.org/NYC//">
-                CUSP Map, NYC & Pittsburgh
-            </a>
-        </div>
-
-        <div class="slide" style="background-image: url(img/sara_portfolio_fractured.png);">
-            <a class="source" href="https://edbuild.org/content/fractured">
-                Fractured
-            </a>
-        </div>
-
-         <div class="slide" style="background-image: url(img/sara_portfolio_split_cities.png);">
-            <a class="source" href="https://www.fairdistrictsga.org/gerrymandering">
-                Fair Districts GA
-            </a>
-        </div>
-
-         <div class="slide" style="background-image: url(img/sara_portfolio_lawrenceville.png);">
-            <a class="source" href="https://www.fairdistrictsga.org/gerrymandering">
-                Fair Districts GA
-            </a>
         </div>
 
         <div class="slide">
@@ -366,7 +415,6 @@
                 "In a GIS, you connect <strong>data</strong> with <strong>geography</strong>."
             </p>
             <a class="source" href="https://gisgeography.com/what-gis-geographic-information-systems/">gisgeography.com</a>
-            <a class="source" href="http://www.datapolitan.com/DOT_GIS/20160610_Intermediate_GIS/#41">datapolitan</a>
         </div>
 
         <div class="slide">
