Add ucsf health atlas

--- a/week1/index.html
+++ b/week1/index.html
@@ -41,9 +41,9 @@
             </a>
         </div>
 
-        <div class="slide" style="background-image: url(img/curb-your-litter.png);">
-            <a class="source">
-                Curb Your Litter
+        <div class="slide" style="background-image: url(img/health-atlas.png);">
+            <a class="source" href="https://healthatlas.ucsf.edu/">
+                UCSF Health Atlas
             </a>
         </div>
         <div class="slide">
