A few more tweaks

--- a/week1/index.html
+++ b/week1/index.html
@@ -419,6 +419,7 @@
 
         <div class="slide">
             <iframe width="640" height="480" src="https://www.youtube.com/embed/eAFG6aQTwPk" frameborder="0" allowfullscreen></iframe>
+            <p>Data for Decision, 1968</p>
         </div>
 
         <div class="slide" style="background-image: url(img/esri.gif);">
@@ -929,6 +930,15 @@
                 <li>Install QGIS</li>
                 <li>Draw a mental map of NYC</li>
             </ul>
+        </div>
+
+        <div class="slide">
+            <h2>homework</h2>
+            <ul style="list-style: disc">
+                <li>Install QGIS</li>
+                <li>Draw a mental map of NYC</li>
+            </ul>
+            <p>Details are in Canvas</p>
         </div>
 
     </body>
