adding slides for week 2

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </section>
                 </section>
 
-                <!--
+                
                 <section>
                     <h3>Week 2: Cartographic design and conventions</h3>
                     <section class="slides">
@@ -96,7 +96,7 @@
                     </section>
                 </section>
 
-                <section>
+                <!-- <section>
                     <h3>Week 3: Thematic Maps</h3>
                     <section class="slides">
                         <h4>
@@ -378,9 +378,9 @@
                             <a href="week14/index.html">slides</a>
                         </h4>
                     </section>
-                </section>
+                </section> -->
 
-                -->
+                
             </section>
 
             <footer>
