--- a/week2/index.html
+++ b/week2/index.html
@@ -203,6 +203,10 @@
             <a class="source" href="http://colorbrewer2.org/">Color Brewer</a>
         </div>
 
+        <div class="slide" style="background-image: url(img/zeroto255.png);">
+            <a class="source" href="https://www.0to255.com/2d7d90">0to255</a>
+        </div>
+
         <div class="slide" style="background-image: url(img/mississippi_meanders.png);">
             <a class="source" href="http://earthobservatory.nasa.gov/IOTD/view.php?id=6887">
                 source
