adding lesson 3 to home page with projections lesson

--- a/week3/inclass2.html
+++ b/week3/inclass2.html
@@ -15,7 +15,8 @@
             <section>
                 <h2>Project Projections</h2>
                 <ol>
-                    <li>Continue working with the map from Part 1.</li>
+                    <li>Download <a href="data/week3data.zip">this data</a>.</li>
+                    <li>Add the Council District Boundaries in QGIS</li>
                     <li>Go to <strong>Project &gt; Project Properties</strong>.</li>
                     <li>Select the <strong>CRS</strong> tab if it's not already selected.</li>
                     <li>In the <strong>Filter</strong> text field, type <code>4326</code> and select <strong>WGS 84</strong>.</li>
