--- a/week3/index.html
+++ b/week3/index.html
@@ -29,9 +29,14 @@
             <a class="source">Meera</a>
         </div>
 
-        <div class="slide" style="background-image: url(img/assignment-nicholas_small_scale.png);">
+        <div class="slide" style="background-image: url(img/assignment_drake.png);">
             <a class="source">Nicholas</a>
         </div>
+
+        <div class="slide" style="background-image: url(img/small_scale_example.jpg);">
+            <a class="source" href="http://rebeccasolnit.net/book/unfathomable-city-a-new-orleans-atlas/">Unfathomable City</a>
+        </div>
+
 
         <div class="slide" style="background-image: url(img/final-projects-canvas.png);">
         </div>
