adding link to projections in class assignment

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                     <section class="lab">
                         <h4>in-class work:</h4>
                         <ol class="inclass-list">
+                            <li><a href="week3/inclass2.html">Projections</a></li>
                             <li><a href="week3/inclass-csv.html">Opening CSVs</a></li>
                             <li><a href="week3/inclass-categorized.html">Categorized maps</a></li>
                             <li><a href="week3/inclass-simple-choropleth.html">Choropleth maps</a></li>
