Move some georeferencing from week 4 to week 5

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
                     </section>
                 </section>
 
-                <!-- <section>
+<!-- 
+                <section>
                     <h3>Week 4: Carto</h3>
                     <section class="slides">
                         <h4>
