Move modeling slides to week 8

--- a/week4/index.html
+++ b/week4/index.html
@@ -135,5 +135,54 @@
             <h2><a href="inclass-carto.html" target="_blank">in-class exercise</a></h2>
         </div>
 
+        <div class="slide">
+            <h2>preparing data for the web</h2>
+        </div>
+
+        <div class="slide">
+            <h2>what if your data takes up too much space?</h2>
+        </div>
+
+        <div class="slide">
+            <h2>or is so large it's taking too long to upload?</h2>
+        </div>
+
+        <div class="slide">
+            <h2>you either have to reduce the <em>number</em> of features or make the features <em>smaller</em></h2>
+        </div>
+
+        <div class="slide">
+            <p>1. clip/filter features if you can</p>
+            <p>2. delete attributes</p>
+            <p>3. simplify lines or polygons</p>
+        </div>
+
+        <div class="slide">
+            <h2>2. delete attributes you don't need</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/delete1.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/delete2.png);">
+        </div>
+
+        <div class="slide">
+            <h2>3. simplify lines or polygons: QGIS or mapshaper.org</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/mapshaper.gif);">
+            <a class="source" href="http://mapshaper.org">source</a>
+        </div>
+
+        <div class="slide">
+            <p>1. clip/filter features if you can</p>
+            <p>2. delete attributes</p>
+            <p>3. simplify lines or polygons</p>
+        </div>
+
+        <div class="slide intermission"></div>
+
+
     </body>
 </html>
