--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
                     </section>
                 </section>
 
-<!-- 
                 <section>
                     <h3>Week 4: Carto</h3>
                     <section class="slides">
@@ -141,7 +140,8 @@
                     <section class="lab">
                         <h4>in-class work:</h4>
                         <ol class="inclass-list">
-                            <li><a href="week4/inclass-carto.html">Carto</a></li>
+                            <li><a href="week4/inclass-carto.html">Carto, part 1</a></li>
+                            <li><a href="week4/inclass-carto-2.html">Carto, part 2</a></li>
                         </ol>
                     </section>
                     <section class="assignment">
@@ -157,6 +157,7 @@
                     </section>
                 </section>
 
+<!-- 
                 <section>
                     <h3>Week 5: Georeferencing &amp; Geoprocessing</h3>
                     <section class="slides">
