--- a/week4/inclass-carto.html
+++ b/week4/inclass-carto.html
@@ -13,11 +13,10 @@
             </header>
 
             <section>
-                <h2>Carto</h2>
+                <h2>Carto, part 1</h2>
                 <ol>
-                    <li>Download <a href="data/week7data.zip">today's data</a>.</li>
-                    <li>Zip the shapefile in <strong>Inside Airbnb</strong> called <strong>manhattan-listings</strong>.</li>
-                    <li>Log in to <a href="https://carto.com/">your Carto account</a>, go to the Data section, and upload the zip file to your Carto account.</li>
+                    <li>Download <a href="data/week4data.zip">today's data</a>.</li>
+                    <li>Log in to <a href="https://carto.com/">your Carto account</a>, go to the Data section, and upload the GeoJSON file in the folder named <strong>Inside Airbnb</strong> to your Carto account.</li>
                     <li>Create a map with the uploaded dataset.</li>
                     <li>Change the styles of the points:
                         <ol>
