--- a/week4/index.html
+++ b/week4/index.html
@@ -27,7 +27,77 @@
         </div>
 
         <div class="slide">
-            <h2>TODO intro to webmapping</h2>
+            <h2>What is a webmap?</h2>
+        </div>
+
+        <div class="slide">
+            <h2>How do you make a webmap?</h2>
+        </div>
+
+        <div class="slide">
+            <h2>Anatomy of a web map</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/web-map-anatomy-0.jpg);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/web-map-anatomy-1.jpg);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/web-map-anatomy-2.jpg);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/web-map-anatomy-3.jpg);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/web-map-anatomy-4.jpg);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/leaflet.png);">
+            <a class="source" href="https://leafletjs.com/">Leaflet</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/leaflet.png);">
+            <h2>Leaflet is great but require programming skills</h2>
+            <a class="source" href="https://leafletjs.com/">Leaflet</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/mapbox.png);">
+            <a class="source" href="https://mapbox.com/">Mapbox</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/mapbox.png);">
+            <h2>same for Mapbox, you need programming skills to do interesting things with it</h2>
+            <a class="source" href="https://mapbox.com/">Mapbox</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/storymap.png);">
+            <a class="source" href="https://storymap.knightlab.com/">StoryMap</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/storymap.png);">
+            <h2>StoryMap is good for specific uses</h2>
+            <a class="source" href="https://storymap.knightlab.com/">StoryMap</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/google-my-maps-example.png);">
+            <a class="source" href="https://www.google.com/maps/d/u/0/">Google My Maps</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/umap.png);">
+            <a class="source" href="https://umap.openstreetmap.fr/en/">uMap</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/umap-example.png);">
+            <a class="source" href="https://umap.openstreetmap.fr/en/map/franklin-county-nc-usa-redistricting_655416#11/36.0383/-78.3092">source</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/unfolded.png);">
+            <a class="source" href="https://www.unfolded.ai/">Unfolded</a>
+        </div>
+
+        <div class="slide">
+            <h2>Carto</h2>
         </div>
 
         <div class="slide" style="background-image: url(img/carto.png);">
@@ -42,6 +112,37 @@
             <h2>(formerly CartoDB)</h2>
             <a class="source" href="http://talkingpointsmemo.com/idealab/cartodb-aims-to-be-the-instagram-of-maps">source</a>
         </div>
+
+        <div class="slide" style="background-image: url(img/cartodb-project.png);">
+            <a class="source" href="https://github.com/CartoDB/cartodb">github.com/CartoDB/cartodb</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-pricing.png);">
+            <a class="source" href="https://carto.com/pricing/">carto.com/pricing</a>
+        </div>
+
+        <div class="slide">
+            <h2>Who uses Carto?</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-amnh.png);">
+            <a class="source" style="margin-right: 400px;" href="https://carto.com/blog/mapping-solomon-islands">Mapping the Historical Biodiversity of the Solomon Islands...</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/readings-risk.png);">
+            <a class="source" href="https://covid19risk.biosci.gatech.edu/">source</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-toxicity-map.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/curb-your-litter.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/mpg-raptors.png);">
+            <a class="source" href="https://raptortracker.mpgranch.com/">Raptor Tracker</a>
+        </div>
+
 
         <div class="slide" style="background-image: url(img/carto-datasets.png);">
         </div>
@@ -93,21 +194,6 @@
         </div>
 
         <div class="slide" style="background-image: url(img/carto-attribute-table.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/qgis-filter.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/carto-widget-price.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/carto-widget-categorized.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/carto-widget-average-0.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/carto-widget-average-1.png);">
         </div>
 
         <div class="slide" style="background-image: url(img/qgis-print-composer.png);">
@@ -183,6 +269,57 @@
 
         <div class="slide intermission"></div>
 
+        <div class="slide">
+            <h2>popups</h2>
+        </div>
+
+        <div class="slide">
+            <h2>popups give you a way to find more information about a particular feature on a map</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/popups.png);">
+        </div>
+
+        <div class="slide">
+            <h2>widgets</h2>
+        </div>
+
+        <div class="slide">
+            <h2>widgets can give you and your users ways to summarize and filter data</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-widget-price.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-widget-categorized.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-widget-average-0.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/carto-widget-average-1.png);">
+        </div>
+
+        <div class="slide">
+            <h2>analysis</h2>
+        </div>
+
+        <div class="slide">
+            <h2>analysis can be a GIS task that you perform on a layer</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/analysis-0.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/analysis-1.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/analysis-2.png);">
+        </div>
+
+        <div class="slide">
+            <h2><a href="inclass-carto-2.html" target="_blank">in-class exercise</a></h2>
+        </div>
 
     </body>
 </html>
