adding week five to website

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </section>
                 </section>
 
-<!-- 
+
                 <section>
                     <h3>Week 5: Georeferencing &amp; Geoprocessing</h3>
                     <section class="slides">
@@ -190,7 +190,7 @@
                     </section>
                 </section>
 
-                <section>
+                <!-- <section>
                     <h3>Week 6: Joins</h3>
                     <section class="slides">
                         <h4>
@@ -381,10 +381,10 @@
                             <a href="week14/index.html">slides</a>
                         </h4>
                     </section>
-                </section> -->
+                </section>
 
                 
-            </section>
+            </section> -->
 
             <footer>
                 <p>Background via <a href="https://www.instagram.com/p/8dPYA4idsS/">the.jefferson.grid</a></p>
