--- a/week5/index.html
+++ b/week5/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Class 4 | Methods 3</title>
+        <title>Class 5 | Methods 3</title>
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
@@ -32,41 +32,16 @@
         </div>
 
         <div class="slide">
-            <h2>Choropleth?</h2>
+            <h2>the Modifiable Areal Unit Problem</h2>
+            <p>the shapes you use can influence the way your data looks without changing the data</p>
         </div>
 
-        <div class="slide" style="background-image: url(img/smoking_rates.png);">
+        <div class="slide" style="background-image: url(img/maup_rate_numbers.png);">
         </div>
 
-        <div class="slide" style="background-image: url(img/choropleth-covid.png);">
-            <a class="source" href="https://coronavirus.jhu.edu/us-map">source</a>
-        </div>
-
-        <div class="slide" style="background-image: url(img/new_boot.jpeg);">
-            <a class="source" href="https://medium.com/matter/louisiana-loses-its-boot-b55b3bd52d1e">
-                source
-            </a>
-            <h2>Louisiana Loses Its Boot</h2>
-        </div>
-
-        <div class="slide" style="background-image: url(img/la_all_land.png);">
-        </div>
-
-        <div class="slide">
-            <p>"Using publicly available data, [we] created a map on which areas that commonly appear as land on government issued maps—woody wetlands, emergent herbaceous wetlands and barren land—were re-<strong>categorized</strong> to appear as water."</p>
-        </div>
-
-        <div class="slide" style="background-image: url(img/la_walkable_land.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/new_boot.jpeg);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/flint-zip-codes.png);">
-            <a class="source" href="https://theconversation.com/how-zip-codes-nearly-masked-the-lead-problem-in-flint-65626">
-                source
-            </a>
-        </div>
+        <!-- <div class="slide" style="background-image: url(img/cdc_ebola.jpg);">
+            <a class="source" href="http://www.cdc.gov/vhf/ebola/resources/distribution-map-guinea-outbreak.html">source</a>
+        </div> -->
 
         <div class="slide" style="background-image: url(img/flint-zip-codes-misaligned.jpg);">
             <a class="source" href="https://theconversation.com/how-zip-codes-nearly-masked-the-lead-problem-in-flint-65626">
@@ -86,18 +61,6 @@
             <a class="source" href="https://theconversation.com/how-zip-codes-nearly-masked-the-lead-problem-in-flint-65626">
                 source
             </a>
-        </div>
-
-        <div class="slide" style="background-image: url(img/assignment-dani.png);">
-            <span style="background: white; float: right;">Dani</span>
-        </div>
-
-        <div class="slide" style="background-image: url(img/assignment-moja.png);">
-            <span style="background: white; float: right;">Moja</span>
-        </div>
-
-        <div class="slide">
-            <h2>let's talk about project thoughts</h2>
         </div>
 
         <div class="slide intermission"></div>
@@ -130,6 +93,10 @@
         <div class="slide intermission"></div>
 
         <div class="slide">
+            <h2>let's talk about project thoughts</h2>
+        </div>
+
+        <div class="slide">
             <h2>duplicating layers</h2>
         </div>
 
@@ -153,11 +120,11 @@
 
         <div class="slide" style="background-image: url(img/save-as-layer-definition.png);"></div>
 
-        <div class="slide">
+        <!-- <div class="slide">
             <h2>insets</h2>
         </div>
 
-        <div class="slide" style="background-image: url(img/inset.png);"></div>
+        <div class="slide" style="background-image: url(img/inset.png);"></div> -->
 
         <div class="slide intermission"></div>
 
@@ -300,12 +267,12 @@
             </ul>
         </div>
 
-        <div class="slide">
+        <!-- <div class="slide">
             <h2>there are built-in heatmap styles</h2>
         </div>
 
         <div class="slide" style="background-image: url(img/qgis-heatmap-builtin.png);">
-        </div>
+        </div> -->
 
         <div class="slide">
             <h2>Creating data</h2>
@@ -425,13 +392,13 @@
             <a class="source" href="http://maps.nypl.org/warper/">maps.nypl.org/warper</a>
         </div>
 
-        <div class="slide" style="background-image: url(img/nypl-building-inspector.png);">
+        <!-- <div class="slide" style="background-image: url(img/nypl-building-inspector.png);">
             <a class="source" href="http://buildinginspector.nypl.org/">NYPL Building Inspector</a>
         </div>
 
         <div class="slide" style="background-image: url(img/nypl-building-inspector.gif);">
             <a class="source" href="http://buildinginspector.nypl.org/">NYPL Building Inspector</a>
-        </div>
+        </div> -->
 
         <div class="slide" style="background-image: url(img/usgs-topoview.png);">
             <a class="source" href="https://ngmdb.usgs.gov/topoview/viewer/">source</a>
@@ -447,6 +414,10 @@
 
         <div class="slide" style="background-image: url(img/public_lab_gowanus.png);">
             <a class="source" href="http://publiclab.org/map/gowanus-canal-brooklyn-new-york/2011-01-22">source</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/draft_ga_congress.jpg);">
+            <a class="source" href="">pdf from GA Leg</a>
         </div>
 
         <div class="slide">
@@ -485,7 +456,7 @@
             <h2><a href="inclass-georeferencing.html" target="_blank">in-class exercise</a></h2>
         </div>
 
-        <div class="slide" style="background-image: url(img/project-manon-0.png);">
+        <!-- <div class="slide" style="background-image: url(img/project-manon-0.png);">
             <a class="source" href="https://due-parsons.github.io/methods3-fall2018/projects/mapping-gentrification-risk-in-the-grand-paris/">source</a>
         </div>
 
@@ -507,7 +478,7 @@
 
         <div class="slide">
             <h2>we'll talk more about modeling next time</h2>
-        </div>
+        </div> -->
 
         <div class="slide intermission"></div>
 
@@ -562,6 +533,32 @@
             <h2>clipping</h2>
         </div>
 
+        <div class="slide" style="background-image: url(img/new_boot.jpeg);">
+            <a class="source" href="https://medium.com/matter/louisiana-loses-its-boot-b55b3bd52d1e">
+                source
+            </a>
+            <h2>Louisiana Loses Its Boot</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/la_all_land.png);">
+        </div>
+
+        <div class="slide">
+            <p>"Using publicly available data, [we] created a map on which areas that commonly appear as land on government issued maps—woody wetlands, emergent herbaceous wetlands and barren land—were re-<strong>categorized</strong> to appear as water."</p>
+        </div>
+
+        <div class="slide" style="background-image: url(img/la_walkable_land.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/new_boot.jpeg);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/flint-zip-codes.png);">
+            <a class="source" href="https://theconversation.com/how-zip-codes-nearly-masked-the-lead-problem-in-flint-65626">
+                source
+            </a>
+        </div>
+
         <div class="slide" style="background-image: url(img/clip-0.png);"></div>
 
         <div class="slide" style="background-image: url(img/clip-1.png);"></div>
@@ -611,7 +608,7 @@
             <h2><a href="inclass-geoprocessing.html" target="_blank">in-class exercise</a></h2>
         </div>
 
-        <div class="slide intermission"></div>
+        <!-- <div class="slide intermission"></div>
 
         <div class="slide" style="background-image: url(img/taxi_map.gif);">
         </div>
@@ -622,7 +619,7 @@
 
         <div class="slide" style="background-image: url(img/taxis_celebrities_medallion.png);">
             <a class="source" href="http://gawker.com/the-public-nyc-taxicab-database-that-accidentally-track-1646724546">source</a>
-        </div>
+        </div> -->
 
         <div class="slide">
             <h2>joins</h2>
