--- a/week6/inclass-attribute-join.html
+++ b/week6/inclass-attribute-join.html
@@ -15,13 +15,11 @@
             <section>
                 <h2>Attribute Joins</h2>
                 <ol>
-                    <li>Download <a href="data/week6data.zip">today's data</a>.</li>
+                    <li>If you haven't already, download <a href="data/week6_folder.zip">today's data</a>.</li>
                     <li>Open the <strong>cb_2018_us_state_500k</strong> shapefile in QGIS.</li>
-                    <li>Open the Excel file in <strong>nytimes-covid-us-states</strong> named <strong>us-states-20200925.xlsx</strong> in QGIS. You can drag and drop it into QGIS.</li>
+                    <li>Open the Excel file in <strong>nytimes-covid-us-states</strong> named <strong>us-states-20211004.xlsx</strong> in QGIS. You can drag and drop it into QGIS.</li>
                     <li>Attribute join the COVID data to the states. Use <strong>fips</strong> as the <strong>Join field</strong>, <strong>STATEFP</strong> as the <strong>Target field</strong>.</li>
                     <li>We'll come back to this dataset for the next in-class exercise.</li>
-                    <!-- <li>Style the states using the joined data. Consider creating a graduated style based on the cases or deaths.</li>
-                    <li>Export the joined layer.</li> -->
                 </ol>
             </section>
 
