--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
                     <section class="lab">
                         <h4>in-class work:</h4>
                         <ol class="inclass-list">
-                            <li><a href="week5/inclass-georeferencing.html">Georeferencing</a></li>
+                            <li><a href="week6/inclass-georeferencing.html">Georeferencing</a></li>
+                            <li><a href="week6/inclass-digitizing.html">Digitizing</a></li>
                             <li><a href="week6/inclass-attribute-join.html">Attribute Joins</a></li>
                             <li><a href="week6/inclass-census.html">Attribute Joins with Census Data</a></li>
                             <li><a href="week6/inclass-spatial-join.html">Spatial Joins</a></li>
