--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     </section>
                 </section>
 
-               <!--  <section>
+               <section>
                     <h3>Week 7: CartoCSS</h3>
                     <section class="slides">
                         <h4>
@@ -256,6 +256,7 @@
                     </section>
                 </section>
 
+                <!--
                 <section>
                     <h3>Week 8: Hex bins, Heatmaps, Geocoding &amp; Creating Data & Models</h3>
                     <section class="slides">
