--- a/week7/inclass-cartocss-attribute.html
+++ b/week7/inclass-cartocss-attribute.html
@@ -13,10 +13,11 @@
             </header>
 
             <section>
-                <h2>Part 4: CartoCSS Attribute Conditions</h2>
+                <h2>CartoCSS Attribute Conditions</h2>
                 <ol>
                     <li>Continue with your Carto map from the previous exercise</li>
-                    <li>Make your markers a different color when the <strong>daynight</strong> column is <strong>D</strong>.</li>
+                    <li>Make your markers a different color when the <strong>room_type</strong> column is <strong>Entire home/apt</strong>.</li>
+                    <li>Experiment with making another condtion using this data.</li>
                 </ol>
             </section>
 
