--- a/week7/inclass-cartocss-properties.html
+++ b/week7/inclass-cartocss-properties.html
@@ -15,7 +15,7 @@
             <section>
                 <h2>Changing properties with CartoCSS</h2>
                 <ol>
-                    <li>Upload the <strong>J1_VIIRS_C2_Global_24h.zip</strong> shapefile from <a href="data/week8data.zip">today's data</a> to Carto. You can just use the zip file without unzipping it. These are fires detected over a 24 hour period, retrieved Oct 19, 2020 from <a href="https://firms.modaps.eosdis.nasa.gov/active_fire/#firms-shapefile">FIRMS</a>.</li>
+                    <li>Continue with the Airbnb data from last time we talked about Carto. If you need it, upload the <strong>manhattan-listings.geojson</strong> file from <a href="data/week7data.zip">today's data</a> to Carto.</li>
                     <li>Open the <a href="https://carto.com/developers/styling/cartocss/">CartoCSS documentation</a>.</li>
                     <li>Make a map with the data and style the points.</li>
                     <li>Using CartoCSS:
@@ -24,6 +24,7 @@
                             <li>Give the markers an outline 2 pixels wide.</li>
                             <li>Give the fill and stroke of the markers different colors.</li>
                         </ol>
+                        (The exact values are less important than figuring out how to set the size of the markers with CartoCSS, so feel free to experiment with values other than 5 and 2.)
                     </li>
                     <li>Keep this Carto map open for upcoming exercises.</li>
                 </ol>
